[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain-writer"
version = "0.3.3"
description = "An integration package connecting Writer and LangChain"
authors = ["Writer, Inc. <dev-feedback@writer.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://www.writer.com"
repository = "https://github.com/writer/langchain-writer"
documentation = "https://dev.writer.com"

[tool.mypy]
disallow_untyped_defs = "True"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain-core = "^0.3.69"
langchain-text-splitters = "^0.3.5"
writer-sdk = ">=2.3.0,<3.0"

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.4.3,<9.0.0"
pytest-asyncio = "~0.23.2"
pytest-socket = "~0.7.0"
pytest-watcher = "~0.3.4"
langchain-tests = "~0.3.11,"
dotenv = "~0.9.9"

[tool.poetry.group.lint.dependencies]
pre-commit = "^4.2.0"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
